--- a/.env
+++ b/.env
@@ -20,11 +20,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=log
+MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=ccfdee4cb176e1
+MAIL_PASSWORD=365f609f9a0fde
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
